--- a/API-Gateway.properties
+++ b/API-Gateway.properties
@@ -1,1 +1,7 @@
-
+spring.cloud.gateway.server.webflux.routes[0].id=Product
+spring.cloud.gateway.server.webflux.routes[0].uri=lb://Product
+spring.cloud.gateway.server.webflux.routes[0].predicates[0]=Path=/products/**
+ 
+spring.cloud.gateway.server.webflux.routes[1].id=Order-Service
+spring.cloud.gateway.server.webflux.routes[1].uri=lb://Order-Service
+spring.cloud.gateway.server.webflux.routes[1].predicates[0]=Path=/orders/**
